# Vesper

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
source/: main.cpp
source/audio/: AudioEngine.cpp  AudioEngine.h
source/files/: files.cpp  files.h
source/files/fonts/: loadFonts.cpp  loadFonts.h
source/gui/: GuiLoop.cpp  GuiLoop.h  gui.h
source/metadata/: albumArt.cpp  albumArt.h  getlyrics.cpp  getlyrics.h  readtags.cpp  readtags.h
